<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textColor="#603a91"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"/>

            <EditText
                android:id="@+id/LoginEmail1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:textColorHint="#603a91"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:padding="8dp"
                android:drawablePadding="16dp"
                android:inputType="textPersonName"
                android:hint="@string/email1"
                android:autofillHints="emailAddress" />
            <EditText
                android:id="@+id/LoginPassword1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/password"
                android:textColorHint="#603a91"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="8dp"
                android:drawablePadding="16dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="password" />

            <ImageView
                android:id="@+id/LoginButton"
                android:layout_width="150dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/btn_login"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_background2"
                android:drawableStart="@drawable/google"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/signup_with_google"
                android:textColor="#603a91"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFacebook"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_background2"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/signup_with_facebook"
                android:textColor="#603a91"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/SendToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_new_user_register"
                android:textAlignment="center"
                android:textColor="#603a91"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>